# makansplit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_DEPLOY.md  README.md  bill_analyzer.py  bot.py  bump_version.sh  config.py  deploy.sh  docker-compose.yml  paynow.py  paynow_generator.py  paynow_storage.py  person_matcher.py  pyproject.toml  requirements.txt  user_matcher.py  utils.py
